--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
 
       <aside class="summary">
         <h3>Summary</h3>
-        <div class="flex-group reaction">
-          <p data-icon="reaction">Reaction</p>
+        <div class="flex-group reaction" data-icon="reaction">
+          <div class="flex-group"><img src="./assets/images/icon-reaction.svg" alt="">
+            <p class="ml-1">Reaction</p>
+          </div>
+
           <div>
             <span>80</span>
             /
@@ -53,7 +56,11 @@
           </div>
         </div>
         <div class="flex-group memory">
-          <p data-icon="memory">Memory</p>
+
+          <div class="flex-group">
+            <img src="./assets/images/icon-memory.svg" alt="">
+            <p class="ml-1">Memory</p>
+          </div>
           <div>
             <span>92</span>
             /
@@ -62,7 +69,10 @@
         </div>
 
         <div class="flex-group verbal">
-          <p>Verbal</p>
+          <div class="flex-group">
+            <img src="./assets/images/icon-verbal.svg" alt="">
+            <p class="ml-1">Verbal</p>
+          </div>
           <div>
             <span>61</span>
             /
@@ -71,7 +81,10 @@
         </div>
 
         <div class="flex-group visual">
-          <p>Visual</p>
+          <div class="flex-group">
+            <img src="./assets/images/icon-visual.svg" alt="">
+            <p class="ml-1">Visual</p>
+          </div>
           <div>
             <span>72</span>
             /
